@@ -38,9 +38,9 @@
 #endif /* LIBAVCODEC_BUILD > 4680 */
 
 #if defined LIBAVFORMAT_VERSION_MAJOR && defined LIBAVFORMAT_VERSION_MINOR 
-#if LIBAVFORMAT_VERSION_MAJOR < 53 && LIBAVFORMAT_VERSION_MINOR < 45
-    #define GUESS_NO_DEPRECATED 
-#endif
+#   if LIBAVFORMAT_VERSION_MAJOR < 53 && LIBAVFORMAT_VERSION_MINOR < 45
+#       define GUESS_NO_DEPRECATED 
+#   endif
 #endif
 
 #if LIBAVFORMAT_BUILD >= 4616
@@ -63,6 +63,15 @@
 #    define AVSTREAM_CODEC_PTR(avs_ptr) (&avs_ptr->codec)
 #endif /* LIBAVFORMAT_BUILD >= 4629 */
 
+// AV_VERSION_INT(a, b, c) (a<<16 | b<<8 | c) 
+// (54*2^16 | 6*2^8 | 100)
+#if LIBAVFORMAT_BUILD >= 3540580
+#define FF_API_NEW_AVIO
+#define URL_RDONLY  AVIO_FLAG_READ       /**< read-only */
+#define URL_WRONLY  AVIO_FLAG_WRITE      /**< write-only */
+#define URL_RDWR    AVIO_FLAG_READ_WRITE /**< read-write pseudo flag */
+#endif
+
 
 /*
  * Name of custom file protocol for appending to existing files instead
@@ -78,6 +87,15 @@ AVFrame *ffmpeg_prepare_frame(struct ffmpeg *, unsigned char *,
 
 /* This is the trailer used to end mpeg1 videos. */
 static unsigned char mpeg1_trailer[] = {0x00, 0x00, 0x01, 0xb7};
+
+
+// FFMPEG API changed in 0.8
+#if defined FF_API_NEW_AVIO
+
+// TODO 
+
+	
+#else
 
 /**
  * file_open_append
@@ -225,8 +243,9 @@ URLProtocol file_protocol = {
 #endif
 };
 
-#endif
+#endif // HAVE_FFMPEG_NEW
 
+#endif // FF_API_NEW_AVIO
 
 /**
  * mpeg1_write_trailer
@@ -238,13 +257,16 @@ URLProtocol file_protocol = {
  */
 static int mpeg1_write_trailer(AVFormatContext *s)
 {
-#if LIBAVFORMAT_BUILD >= (52<<16)
+#if defined FF_API_NEW_AVIO
+    avio_write(s->pb, mpeg1_trailer, 4);
+    avio_flush(s->pb);
+#elif LIBAVFORMAT_BUILD >= (52<<16)
     put_buffer(s->pb, mpeg1_trailer, 4);
     put_flush_packet(s->pb);
 #else
     put_buffer(&s->pb, mpeg1_trailer, 4);
     put_flush_packet(&s->pb);
-#endif /* LIBAVFORMAT_BUILD >= (52<<16) */
+#endif /* FF_API_NEW_AVIO -- LIBAVFORMAT_BUILD >= (52<<16) */
 
     return 0; /* success */
 }
@@ -265,8 +287,11 @@ void ffmpeg_init()
 
 #if LIBAVCODEC_BUILD > 4680
     av_log_set_callback((void *)ffmpeg_avcodec_log);
+    av_log_set_level(AV_LOG_ERROR);
 #endif
 
+#if defined FF_API_NEW_AVIO
+#else
     /*
      * Copy the functions to use for the append file protocol from the standard
      * file protocol.
@@ -284,6 +309,9 @@ void ffmpeg_init()
 #else
 #   warning av_register_protocolXXX missing
 #endif
+
+#endif // FF_API_NEW_AVIO
+
 }
 
 /**
@@ -299,7 +327,6 @@ static AVOutputFormat *get_oformat(const char *codec, char *filename)
 {
     const char *ext;
     AVOutputFormat *of = NULL;
-
     /*
      * Here, we use guess_format to automatically setup the codec information.
      * If we are using msmpeg4, manually set that codec here.
@@ -430,7 +457,7 @@ struct ffmpeg *ffmpeg_open(char *ffmpeg_video_codec, char *filename,
     AVCodec *codec;
     struct ffmpeg *ffmpeg;
     int is_mpeg1;
-
+    int ret;
     /*
      * Allocate space for our ffmpeg structure. This structure contains all the
      * codec and image information we need to generate movies.
@@ -473,8 +500,11 @@ struct ffmpeg *ffmpeg_open(char *ffmpeg_video_codec, char *filename,
     /* Create a new video stream and initialize the codecs. */
     ffmpeg->video_st = NULL;
     if (ffmpeg->oc->oformat->video_codec != CODEC_ID_NONE) {
+#if defined FF_API_NEW_AVIO 
+        ffmpeg->video_st = avformat_new_stream(ffmpeg->oc, NULL /* Codec */);
+#else
         ffmpeg->video_st = av_new_stream(ffmpeg->oc, 0);
-
+#endif
         if (!ffmpeg->video_st) {
             MOTION_LOG(ERR, TYPE_ENCODER, SHOW_ERRNO, "%s: av_new_stream - could"
                        " not alloc stream");
@@ -536,6 +566,9 @@ struct ffmpeg *ffmpeg_open(char *ffmpeg_video_codec, char *filename,
         c->flags |= CODEC_FLAG_GLOBAL_HEADER;
     }
 
+#if defined FF_API_NEW_AVIO
+// pass the options to avformat_write_header directly
+#else
     /* Set the output parameters (must be done even if no parameters). */
     if (av_set_parameters(ffmpeg->oc, NULL) < 0) {
         MOTION_LOG(ERR, TYPE_ENCODER, NO_ERRNO, "%s: av_set_parameters error:"
@@ -543,6 +576,7 @@ struct ffmpeg *ffmpeg_open(char *ffmpeg_video_codec, char *filename,
         ffmpeg_cleanups(ffmpeg);
         return NULL;
     }
+#endif
 
     /* Dump the format settings.  This shows how the various streams relate to each other. */
     //dump_format(ffmpeg->oc, 0, filename, 1);
@@ -567,7 +601,13 @@ struct ffmpeg *ffmpeg_open(char *ffmpeg_video_codec, char *filename,
     pthread_mutex_lock(&global_lock);
 
     /* Open the codec */
-    if (avcodec_open(c, codec) < 0) {
+#if defined FF_API_NEW_AVIO
+    ret = avcodec_open2(c, codec, NULL /* options */ );
+#else
+    ret = avcodec_open(c, codec);
+#endif
+
+    if (ret < 0) {
         /* Release the lock. */
         pthread_mutex_unlock(&global_lock);
         MOTION_LOG(ERR, TYPE_ENCODER, NO_ERRNO, "%s: avcodec_open - could not open codec %s",
@@ -623,11 +663,20 @@ struct ffmpeg *ffmpeg_open(char *ffmpeg_video_codec, char *filename,
          * url_fopen, but no protocol (=> default) for other codecs.
          */
         if (is_mpeg1)
+#if defined FF_API_NEW_AVIO
+            snprintf(file_proto, sizeof(file_proto), "%s", filename);
+#else
             snprintf(file_proto, sizeof(file_proto), APPEND_PROTO ":%s", filename);
+#endif
         else
             snprintf(file_proto, sizeof(file_proto), "%s", filename);
 
+
+#if defined FF_API_NEW_AVIO
+        if (avio_open(&ffmpeg->oc->pb, file_proto, URL_WRONLY) < 0) {
+#else
         if (url_fopen(&ffmpeg->oc->pb, file_proto, URL_WRONLY) < 0) {
+#endif
             /* Path did not exist? */
             if (errno == ENOENT) {
                 /* Create path for file (don't use file_proto)... */
@@ -636,8 +685,12 @@ struct ffmpeg *ffmpeg_open(char *ffmpeg_video_codec, char *filename,
                     return NULL;
                 }
 
+#if defined FF_API_NEW_AVIO
+                if (avio_open(&ffmpeg->oc->pb, file_proto, URL_WRONLY) < 0) {
+#else
                 /* And retry opening the file (use file_proto). */
                 if (url_fopen(&ffmpeg->oc->pb, file_proto, URL_WRONLY) < 0) {
+#endif
                     MOTION_LOG(ERR, TYPE_ENCODER, SHOW_ERRNO, "%s: url_fopen -"
                                " error opening file %s", filename);
                     ffmpeg_cleanups(ffmpeg);
@@ -661,8 +714,11 @@ struct ffmpeg *ffmpeg_open(char *ffmpeg_video_codec, char *filename,
     }
 
     /* Write the stream header, if any. */
+#if defined FF_API_NEW_AVIO
+    avformat_write_header(ffmpeg->oc, NULL);
+#else
     av_write_header(ffmpeg->oc);
-
+#endif // FF_API_NEW_AVIO
     return ffmpeg;
 }
 
@@ -693,12 +749,6 @@ void ffmpeg_cleanups(struct ffmpeg *ffmpeg)
     for (i = 0; i < ffmpeg->oc->nb_streams; i++)
         av_freep(&ffmpeg->oc->streams[i]);
 
-/*
-        if (!(ffmpeg->oc->oformat->flags & AVFMT_NOFILE)) {
-            // close the output file
-            if (ffmpeg->oc->pb) url_fclose(&ffmpeg->oc->pb);
-        }
-*/
     /* Free the stream */
     av_free(ffmpeg->oc);
 #if LIBAVFORMAT_BUILD >= 4629
@@ -734,15 +784,17 @@ void ffmpeg_close(struct ffmpeg *ffmpeg)
     for (i = 0; i < ffmpeg->oc->nb_streams; i++)
         av_freep(&ffmpeg->oc->streams[i]);
 
-
     if (!(ffmpeg->oc->oformat->flags & AVFMT_NOFILE)) {
         /* Close the output file. */
-#if LIBAVFORMAT_BUILD >= (52<<16)
+#if defined FF_API_NEW_AVIO
+        avio_close(ffmpeg->oc->pb);
+#elif LIBAVFORMAT_BUILD >= (52<<16)
         url_fclose(ffmpeg->oc->pb);
 #else
         url_fclose(&ffmpeg->oc->pb);
-#endif /* LIBAVFORMAT_BUILD >= (52<<16) */
+#endif /* FF_API_NEW_AVIO -- LIBAVFORMAT_BUILD >= (52<<16) */
     }
+
 
     /* Free the stream. */
     av_free(ffmpeg->oc);
@@ -801,7 +853,8 @@ int ffmpeg_put_other_image(struct ffmpeg *ffmpeg, unsigned char *y,
  */
 int ffmpeg_put_frame(struct ffmpeg *ffmpeg, AVFrame *pic)
 {
-    int out_size, ret;
+    int out_size, ret, got_packet_ptr;
+
 #ifdef FFMPEG_AVWRITEFRAME_NEWAPI
     AVPacket pkt;
 
@@ -812,11 +865,11 @@ int ffmpeg_put_frame(struct ffmpeg *ffmpeg, AVFrame *pic)
     if (ffmpeg->oc->oformat->flags & AVFMT_RAWPICTURE) {
         /* Raw video case. The API will change slightly in the near future for that. */
 #ifdef FFMPEG_AVWRITEFRAME_NEWAPI
-#if LIBAVCODEC_VERSION_MAJOR < 53        
+#   if LIBAVCODEC_VERSION_MAJOR < 53        
         pkt.flags |= PKT_FLAG_KEY;
-#else
+#   else
         pkt.flags |= AV_PKT_FLAG_KEY;  
-#endif        
+#   endif        
         pkt.data = (uint8_t *)pic;
         pkt.size = sizeof(AVPicture);
         ret = av_write_frame(ffmpeg->oc, &pkt);
@@ -826,10 +879,22 @@ int ffmpeg_put_frame(struct ffmpeg *ffmpeg, AVFrame *pic)
 #endif /* FFMPEG_AVWRITEFRAME_NEWAPI */
     } else {
         /* Encodes the image. */
+#if defined FF_API_NEW_AVIO
+        pkt.data = ffmpeg->video_outbuf;
+        pkt.size = ffmpeg->video_outbuf_size;
+
+        out_size = avcodec_encode_video2(AVSTREAM_CODEC_PTR(ffmpeg->video_st), 
+                                        &pkt, pic, &got_packet_ptr);
+        if (out_size < 0)
+            // Error encondig 
+            out_size = 0;
+        else
+            out_size = pkt.size;
+#else
         out_size = avcodec_encode_video(AVSTREAM_CODEC_PTR(ffmpeg->video_st),
                                         ffmpeg->video_outbuf,
                                         ffmpeg->video_outbuf_size, pic);
-
+#endif
         /* If zero size, it means the image was buffered. */
         if (out_size != 0) {
             /*
@@ -840,12 +905,11 @@ int ffmpeg_put_frame(struct ffmpeg *ffmpeg, AVFrame *pic)
             pkt.pts = AVSTREAM_CODEC_PTR(ffmpeg->video_st)->coded_frame->pts;
 
             if (AVSTREAM_CODEC_PTR(ffmpeg->video_st)->coded_frame->key_frame)
-#if LIBAVCODEC_VERSION_MAJOR < 53                
+#   if LIBAVCODEC_VERSION_MAJOR < 53                
                 pkt.flags |= PKT_FLAG_KEY;
-#else
+#   else
                 pkt.flags |= AV_PKT_FLAG_KEY;
-#endif                
-
+#   endif                
 
             pkt.data = ffmpeg->video_outbuf;
             pkt.size = out_size;
@@ -854,6 +918,7 @@ int ffmpeg_put_frame(struct ffmpeg *ffmpeg, AVFrame *pic)
             ret = av_write_frame(ffmpeg->oc, ffmpeg->video_st->index,
                                  ffmpeg->video_outbuf, out_size);
 #endif /* FFMPEG_AVWRITEFRAME_NEWAPI */
+
         } else {
             ret = 0;
         }
